--- a/home.css
+++ b/home.css
@@ -69,6 +69,26 @@ li{
         padding: 10px 20px 10px 0;
     }
 }
+/* Main sections */
+.collectionHome{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 20px 0 20px 0;
+}
+#photoCollection h1{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.collectionHome img{
+    width: 20%;
+    border: 1px solid black;
+}
+
+
+
+
 
 
 /*Footer*/
@@ -77,10 +97,11 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0px;
     width: 100%;
     height: 80px;
+    padding-left:5px ;
     /* padding: 5px 5px 0px 5px; */
 }
 
