--- a/style/styleAboutMe.css
+++ b/style/styleAboutMe.css
@@ -14,6 +14,13 @@
 }
 
 /* Header */
+header{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 170px;
+    background-color: rgb(255, 255, 255);
+}
 a{
     color:black;
     text-decoration: none;
@@ -24,9 +31,6 @@ li{
 .logoHeader{
     float: left;
     width: 150px;
-    display: flex;
-    justify-self: center;
-    align-self:baseline;
     padding: 15px 0 0 50px;
 }
 .barRight{
@@ -34,6 +38,7 @@ li{
     justify-content: right;
     gap: 10px;
     padding: 10px 20px 0 0;
+    align-items: center;
 }
 .centerNav .navPages{
     display: flex;
@@ -51,23 +56,43 @@ li{
 #account img{
     display: none;
 }
+#hamburgerMenu{
+    font-size: 1.8em;
+    display: none;
+}
+
 
 /* Header responsive */
 @media (max-width: 900px) {
 .logoHeader {
         width: 120px;
-        padding-top: 40px;
+        /* padding-top: 40px; */
     }
     .centerNav .navPages{
+        flex-direction: column;
+        display: none;
+        margin: 10px;
+        padding: 5px;     
+        position:relative;
+        gap: 10px;
+        z-index: 3;
+        background-color: white;   
+        border: #E6A197 1.5px solid;     
+        }
+
+    #hamburgerMenu{
         display: flex;
         flex-direction: column;
-        align-items: flex-end ;
-        margin: 0;
-        padding: 0 20px 0 0;
+        align-items: center ;
     }
     .barRight{
-        padding: 10px 20px 10px 0;
+        padding-top: 70px ;
     }
+};
+
+/* Main sections */
+main{
+z-index: 1;
 }
 /* Main */
 section{
