--- a/home.css
+++ b/home.css
@@ -16,6 +16,7 @@
 /* Header */
 header{
     position: sticky;
+    z-index: 2;
     top: 0;
     width: 100%;
     height: 170px;
@@ -61,12 +62,11 @@ li{
     display: none;
 }
 
-
 /* Header responsive */
 @media (max-width: 900px) {
 .logoHeader {
         width: 120px;
-        /* padding-top: 40px; */
+        padding-left: 20px;
     }
     .centerNav .navPages{
         flex-direction: column;
@@ -75,7 +75,7 @@ li{
         padding: 5px;     
         position:relative;
         gap: 10px;
-        z-index: 3;
+        z-index: 2;
         background-color: white;   
         border: #E6A197 1.5px solid;     
         }
@@ -92,11 +92,154 @@ li{
 
 /* Main sections */
 main{
-z-index: 1;
-}
+z-index: 1;}
+
 /* Carousel */
+#carousel{
+    max-width:fit-content;
+    position: relative;
+    margin: auto;
+}
 
+/* Style arrows buttons */
+.leftArrow, .rightArrow {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: 40px; /* Ancho y alto iguales para hacer el botón circular */
+    height: 40px; 
+    margin-top: -25px; /* Mitad del height para centrar verticalmente */
+    display: flex; /* Centrar el contenido */
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 30px;
+    transition: background-color 0.3s ease; /* Suavizar el hover */
+    background-color: #E6A197;
+    border: #FFE0E6 3px solid;
+    border-radius: 50%; /* Asegurar la forma circular */
+    user-select: none;
+}
 
+/* Position the right button to the right */
+.rightArrow{
+    right: 0;
+    margin-right: 5px;
+}
+.leftArrow{
+    margin-left: 5px;
+}
+/* Hover of the buttons, it will inverse colors */
+.leftArrow:hover, .rightArrow:hover{
+    background-color: #FFE0E6;
+    border: #E6A197 3px solid;
+}
+
+.slides{
+    position: relative;
+    transition: transform 1.5s ease-in-out, opacity 1.5s ease-in-out;
+}
+
+.slides img{
+    width:100%;
+    vertical-align: middle;
+    margin-top: 20px;
+    height: 600px;
+}
+.text-slide{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* To center de text */
+    transform: translate(-50%, -50%); 
+    color: black;
+    font-size: 50px;
+    text-align: center;
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+#dots-slides {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    position: absolute;
+    margin-top: 5px;
+    width: 100%;  
+    margin-bottom: 20px;
+}
+.dot{
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color:#FFE0E6 ;
+    border-radius: 50%;
+    border: black 0.5px solid;
+    align-items: center;
+    display: inline-block;
+    transition: background-color 0.6 ease;
+}
+.active{
+    background-color: #E6A197;
+}
+
+/* Keyframe for sliding the slides */
+
+@keyframes slideInFromRight {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromLeft {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideOutToLeft {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes slideOutToRight {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(100%);
+    }
+}
+
+/* Media Queries for the carousel */
+@media only screen and (max-width:900px){
+    #carousel{
+        width: fit-content;
+    }
+    .text-slide{
+        font-size: 20px;
+    }
+    .rightArrow, .leftArrow{
+        font-size: 20px;
+        width: 30px; /* Ancho y alto iguales para hacer el botón circular */
+        height: 30px; 
+    }
+    .slides img{
+        width: 100%;
+        height: auto;
+    }
+}
 /* Links center */
 #linksCenter{
     display: flex;
@@ -105,13 +248,20 @@ z-index: 1;
     align-items: center;
     background-color: #ffe0e62d;
     padding: 10px 0 10px 0;
-    margin: 20px 0 20px 0;
+    margin: 40px 0 20px 0;
+    /* width: 100%; */
 }
 #linksCenter :hover{
     text-decoration: underline 2px #E6A197;
 }
 .iconCenter {
     text-align: center;
+}
+
+@media only screen and (max-width:800px) {
+    .iconCenter img{
+        width: 100px
+    }    
 }
 /* Collections home */
 .collection{
@@ -183,11 +333,10 @@ footer{
     flex-direction: row;
     justify-content: space-between;
     /* position: fixed; */
-    bottom: 0px;
-    width: 100%;
+    bottom: 0;
     height: 80px;
     padding-left:5px ;
-    /* padding: 5px 5px 0px 5px; */
+    width: 99%;
 }
 
 .logoFooter img{
@@ -210,7 +359,8 @@ footer{
     flex-direction: column;
     justify-content: flex-end;
     text-align: right;
-    padding: 10px 10px 10px 0;
+    right: 0;    
+
 }
 footer p:hover{
     text-decoration: underline 2px#E6A197;
@@ -224,21 +374,15 @@ footer p:hover{
         font-size: 0.82em;
     }
 }
-@media (max-width:400px){
+@media (max-width:430px){
     footer{
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
         height: auto;
-    }
-
-    .centerFooter{
-        align-self:flex-end;
-        align-items: flex-end;
-        padding: 0 5px 0 0;
+        margin-top: 30px;
     }
     .footerRight{
-        align-self: flex-end;
-        text-align: right;
+        text-align: center;
     }
-    .logoFooter{
-        align-content: flex-end;
-    }
-    }
+}
