--- a/style/styleLogin.css
+++ b/style/styleLogin.css
@@ -93,12 +93,16 @@ li{
 /*Main*/
 main{
     z-index: 1;
-    }
+}
+
 article{
     display: flex;
     flex-direction: row;
+    width: 100%;
     justify-content: space-evenly;
-    align-items:flex-start;
+    align-items:center;
+    height: 68vh;
+    
 
 }
 .pinkLine{
@@ -160,6 +164,7 @@ form input {
     article{
         flex-direction: column;
         align-items: center;
+        height: fit-content;
     }
 
     .pinkLine{
@@ -174,12 +179,11 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* position: fixed; */
-    bottom: 0px;
-    width: 100%;
+    position: relative;
+    bottom: 0;
     height: 80px;
     padding-left:5px ;
-    /* padding: 5px 5px 0px 5px; */
+    width: 99%;
 }
 
 .logoFooter img{
@@ -202,7 +206,8 @@ footer{
     flex-direction: column;
     justify-content: flex-end;
     text-align: right;
-    padding: 10px 10px 10px 0;
+    right: 0;    
+
 }
 footer p:hover{
     text-decoration: underline 2px#E6A197;
