--- a/style/styleContact.css
+++ b/style/styleContact.css
@@ -214,12 +214,11 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* position: fixed; */
-    bottom: 0px;
-    width: 100%;
+    position: relative;
+    bottom: 0;
     height: 80px;
     padding-left:5px ;
-    /* padding: 5px 5px 0px 5px; */
+    width: 99%;
 }
 
 .logoFooter img{
@@ -242,7 +241,8 @@ footer{
     flex-direction: column;
     justify-content: flex-end;
     text-align: right;
-    padding: 10px 10px 10px 0;
+    right: 0;    
+
 }
 footer p:hover{
     text-decoration: underline 2px#E6A197;
@@ -256,21 +256,15 @@ footer p:hover{
         font-size: 0.82em;
     }
 }
-@media (max-width:400px){
+@media (max-width:430px){
     footer{
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
         height: auto;
-    }
-
-    .centerFooter{
-        align-self:flex-end;
-        align-items: flex-end;
-        padding: 0 5px 0 0;
+        margin-top: 30px;
     }
     .footerRight{
-        align-self: flex-end;
-        text-align: right;
+        text-align: center;
     }
-    .logoFooter{
-        align-content: flex-end;
-    }
-    }
+}
