--- a/home.css
+++ b/home.css
@@ -84,6 +84,7 @@ li{
         display: flex;
         flex-direction: column;
         align-items: center ;
+        cursor: pointer;
     }
     .barRight{
         padding-top: 70px ;
