--- a/style/styleAboutMe.css
+++ b/style/styleAboutMe.css
@@ -16,6 +16,7 @@
 /* Header */
 header{
     position: sticky;
+    z-index: 2;
     top: 0;
     width: 100%;
     height: 170px;
@@ -50,7 +51,7 @@ li{
 .navbar a:hover { 
     border-bottom: 3px solid #E6A197;
 }
-#aboutMe{
+#homePage{
     border-bottom: 3px solid #E6A197;
 } 
 #account img{
@@ -61,12 +62,11 @@ li{
     display: none;
 }
 
-
 /* Header responsive */
 @media (max-width: 900px) {
 .logoHeader {
         width: 120px;
-        /* padding-top: 40px; */
+        padding-left: 20px;
     }
     .centerNav .navPages{
         flex-direction: column;
@@ -75,7 +75,7 @@ li{
         padding: 5px;     
         position:relative;
         gap: 10px;
-        z-index: 3;
+        z-index: 2;
         background-color: white;   
         border: #E6A197 1.5px solid;     
         }
@@ -84,12 +84,12 @@ li{
         display: flex;
         flex-direction: column;
         align-items: center ;
+        cursor: pointer;
     }
     .barRight{
         padding-top: 70px ;
     }
 };
-
 /* Main sections */
 main{
 z-index: 1;
@@ -126,15 +126,10 @@ section{
 
 #aboutPieces{
     display: flex;
-    width: 80%;
+    width: 100%;
     margin: 0 auto 40px auto;
 }
-#aboutPieces img{
-    width: 40%;
-    margin: auto;
-    height: 500px;
 
-}
 .piecesText{
     margin-left: 200px;
     padding:5px;
@@ -163,26 +158,151 @@ section{
     }
     #aboutCeci img{
         width: 90%;
-        margin:0 auto 10px auto;
+        margin:10px auto 10px auto;
         height: auto;
-    
     }
     #aboutPieces{
         display: flex;
         flex-direction: column-reverse;
-        width: 100%;
         font-size: small;
     }
     .piecesText{
         margin: 20px auto;
     }
-    #aboutPieces img{
-        width: 90%;
-        margin:0 auto 10px auto;
-        height: auto;
-    
-    }
 }
+
+
+    
+/* Carousel */
+    #carousel{
+        max-width:max-content;
+        position: relative;
+        margin-left:30px ;
+    }
+    
+    /* Style arrows buttons */
+    .leftArrow, .rightArrow {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: 40px; /* Ancho y alto iguales para hacer el botón circular */
+        height: 40px; 
+        margin-top: -25px; /* Mitad del height para centrar verticalmente */
+        display: flex; /* Centrar el contenido */
+        justify-content: center;
+        align-items: center;
+        color: black;
+        font-size: 30px;
+        transition: background-color 0.3s ease; /* Suavizar el hover */
+        background-color: #E6A197;
+        border: #FFE0E6 3px solid;
+        border-radius: 50%; /* Asegurar la forma circular */
+        user-select: none;
+    }
+    
+    /* Position the right button to the right */
+    .rightArrow{
+        right: 0;
+        margin-right: 5px;
+    }
+    .leftArrow{
+        margin-left: 5px;
+    }
+    /* Hover of the buttons, it will inverse colors */
+    .leftArrow:hover, .rightArrow:hover{
+        background-color: #FFE0E6;
+        border: #E6A197 3px solid;
+    }
+    
+    .slides{
+        position: relative;
+        transition: transform 1.5s ease-in-out, opacity 1.5s ease-in-out;
+    }
+    
+    .slides img{
+        width:100%;
+    }
+    
+    #dots-slides {
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+        position: absolute;
+        margin-top: 5px;
+        width: 100%;  
+
+    }
+    .dot{
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 5px;
+        background-color:#FFE0E6 ;
+        border-radius: 50%;
+        border: black 0.5px solid;
+        align-items: center;
+        display: inline-block;
+        transition: background-color 0.6 ease;
+    }
+    .active{
+        background-color: #E6A197;
+    }
+    
+    /* Keyframe for sliding the slides */
+    
+    /* @keyframes slideInFromRight {
+        from {
+            transform: translateX(100%);
+        }
+        to {
+            transform: translateX(0);
+        }
+    }
+    
+    @keyframes slideInFromLeft {
+        from {
+            transform: translateX(-100%);
+        }
+        to {
+            transform: translateX(0);
+        }
+    }
+    
+    @keyframes slideOutToLeft {
+        from {
+            transform: translateX(0);
+        }
+        to {
+            transform: translateX(-100%);
+        }
+    }
+    
+    @keyframes slideOutToRight {
+        from {
+            transform: translateX(0);
+        }
+        to {
+            transform: translateX(100%);
+        }
+    } */
+    
+    /* Media Queries for the carousel */
+    @media only screen and (max-width:900px){
+        #carousel{
+            width: fit-content;
+            margin-bottom: 30px;
+        }
+        .rightArrow, .leftArrow{
+            font-size: 20px;
+            width: 30px; /* Ancho y alto iguales para hacer el botón circular */
+            height: 30px; 
+        }
+        .slides img{
+            width: 90%;
+            height: auto;
+        }
+    }
+
 
 
 
@@ -196,11 +316,10 @@ footer{
     flex-direction: row;
     justify-content: space-between;
     /* position: fixed; */
-    bottom: 0px;
-    width: 100%;
+    bottom: 0;
     height: 80px;
     padding-left:5px ;
-    /* padding: 5px 5px 0px 5px; */
+    width: 99%;
 }
 
 .logoFooter img{
@@ -223,7 +342,8 @@ footer{
     flex-direction: column;
     justify-content: flex-end;
     text-align: right;
-    padding: 10px 10px 10px 0;
+    right: 0;    
+
 }
 footer p:hover{
     text-decoration: underline 2px#E6A197;
@@ -237,21 +357,15 @@ footer p:hover{
         font-size: 0.82em;
     }
 }
-@media (max-width:400px){
+@media (max-width:430px){
     footer{
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
         height: auto;
-    }
-
-    .centerFooter{
-        align-self:flex-end;
-        align-items: flex-end;
-        padding: 0 5px 0 0;
+        margin-top: 30px;
     }
     .footerRight{
-        align-self: flex-end;
-        text-align: right;
+        text-align: center;
     }
-    .logoFooter{
-        align-content: flex-end;
-    }
-    }
+}
